Post requests are not blocked by cors policy